--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@capacitor/keyboard": "1.1.3",
     "@capacitor/status-bar": "1.0.6",
     "@ionic/angular": "^5.5.2",
+    "@ionic/storage": "^3.0.6",
     "rxjs": "~6.6.0",
     "tslib": "^2.2.0",
     "zone.js": "~0.11.4"
@@ -42,6 +43,7 @@
     "@angular/language-service": "~12.0.1",
     "@capacitor/cli": "3.3.2",
     "@ionic/angular-toolkit": "^4.0.0",
+    "@ionic/lab": "3.2.11",
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.11.1",
